fix: start current points at `0`
Would previously start calculating with `NaN`

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@
 				placeholder="Current Points"
 				class="input input-bordered w-full"
 				min="0"
+				value="0"
 				step="50"
 			/>
 			<div class="w-full">
